Working on scrolling message area isntead of the whole document Currently the chat area is fixed and not responsive

--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,6 @@
 }
 
 html, body {
-  /*height: 100%;*/
   margin: 0;
   padding: 0;
 }
@@ -19,16 +18,24 @@ ul {
   word-wrap: break-word;
 }
 
+.cont {
+  position:relative; /* needed for footer positioning*/
+  height:auto !important; /* real browsers */
+  min-height:100%; /* real browsers */
+}
+
 .chatArea {
   height: 100%;
-  padding-bottom: 150px;
+  /*padding-bottom: 60px;*/
 }
 
 #messages {
-  height: 100%;
   margin: 0;
-  overflow-y: auto;
   padding: 10px 20px 10px 20px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  max-height: 340px;
+
 }
 
 #messages { list-style-type: none; margin: 0; padding: 0; }
@@ -37,13 +44,16 @@ ul {
 #messages li:nth-child(odd) { background: #d9edf7; }
 
 /*form { padding: 10px; position: fixed; bottom: 0; width: 100%; }*/
-form { padding: 10px; position: fixed; bottom: 0; width: 100%; }
+/*form { padding: 10px; position: absolute; bottom: 0; width: 100; }*/
 form {
   padding: 10px;
-  position: fixed;
+  /*position: relative;*/
+  position: absolute;
   bottom: 0;
   width: 100%;
-  background-color: white;
+  /*height: 20%;*/
+  /*background-color: white;*/
+
 }
 /*form input { padding: 10px; width: 90%; margin-right: .5%; }*/
 #m {
